# igloo

./: Cargo.toml  README.md
crates/connectors/iceberg/: Cargo.toml
crates/connectors/iceberg/src/: catalog.rs  lib.rs  table_provider.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: main.rs
crates/engine/: Cargo.toml
crates/engine/src/: join_engine.rs  lib.rs
crates/engine/tests/: integration_join_test.rs
docs/: parquet-iceberg-joins.md
