[workspace]
members = [
    "crates/api",
    "crates/client",
    "crates/coordinator",
    "crates/worker",
    "crates/engine",
    "crates/cache",
    "crates/cdc",
    "crates/common",
    "crates/connectors/postgres",
    "crates/connectors/mysql",
    "crates/connectors/filesystem",
    "crates/connectors/iceberg",
    "pyigloo"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
# Core Arrow and DataFusion dependencies
arrow = "55.1.0"
arrow-flight = "55.1.0"
datafusion = "48.0.0"
# Parquet support
parquet = "55.1.0"
# Iceberg support
iceberg = "0.4.0"
iceberg-datafusion = "0.4.0"
# Object store for file access
object_store = "0.11.1"
# Async utilities
futures = "0.3"
# Error handling
thiserror = "2.0"
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }