[package]
name = "igloo-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-api = { path = "../api" }
igloo-common = { path = "../common" }
igloo-engine = { path = "../engine" }
igloo-connector-filesystem = { path = "../connectors/filesystem" }
igloo-connector-iceberg = { path = "../connectors/iceberg" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
chrono = "0.4"
datafusion = { workspace = true }
object_store = { workspace = true }
arrow-flight = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }