[package]
name = "igloo-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-common = { path = "../common" }
igloo-connector-filesystem = { path = "../connectors/filesystem" }
igloo-connector-iceberg = { path = "../connectors/iceberg" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
sqlparser = "0.56.0"
datafusion = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }