[package]
name = "igloo-connector-iceberg"
version = "0.1.0"
edition = "2021"

[dependencies]
igloo-common = { path = "../../common" }
tokio = { workspace = true }
arrow = { workspace = true }
datafusion = { workspace = true }
parquet = { workspace = true }
iceberg = { workspace = true }
iceberg-datafusion = { workspace = true }
object_store = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }